# pykinect2

./: CMakeLists.txt  README.md  setup.py
src/: CMakeLists.txt  kinect2.i
